<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.valverde.byloche.LoginActivity"
    android:background="@color/colorcrema"
    android:id="@+id/loginPage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/titulo"
                    android:textColor="@color/colornegro"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="64dp"
                    android:layout_height="48dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/textView19"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/lo_text"
                android:textColor="@color/colornegro"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="311dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:ems="10"
                    android:hint="@string/lo_email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_contraseña"
                    android:layout_width="311dp"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:ems="10"
                    android:hint="@string/lo_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tperfil4"
                android:textColor="@color/colornegro" />

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#00FFFFFF"
                android:text="@string/tperfil5" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="101dp"
                android:layout_height="38dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/lo_boton" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>